--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 docker/dockerwithmaven/java/target
 docker/playground/labs/labdockercompose/mysql_data
 docker/playground/labs/labdockercompose/artifacts
+.vscode/settings.json
